--- a/UI/Ui.csproj
+++ b/UI/Ui.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Converters\BoolInvertConverter.cs" />
     <Compile Include="Converters\ColorToSolidBrushConverter.cs" />
     <Compile Include="Converters\Converters.cs" />
+    <Compile Include="Converters\HexColorToSolidBrushConverter.cs" />
     <Compile Include="Converters\VisibilityToBool.cs" />
     <Compile Include="UiBindableBase.cs" />
     <Compile Include="CanncellableCommand.cs" />
